--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     ::-webkit-scrollbar-corner{background-color: transparent;}
   </style>
 </head>
-<body class="bg c-8 fs-14 fc">
+<body class="bg c-8 fs-10 fc">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
   <div class="ps wf bb bc-1 bg z-2" style="height: 60px;left:0;top:0;">
     <div class="ma wf px-40 fr hf ac" style="max-width:1200px;">
@@ -52,24 +52,24 @@
           <div class="p-20 f-3 md:f-1 bg-o-2 bd bc-o-4"></div>
         </div>
         <div class="fr ac fw">
-          <select class="p-10 bd bc-2 m-10 r-4">
+          <select class="px-5 py-3 r-2 bd bc-2 m-10">
             <option value="1">你好</option>
             <option value="2">你好111</option>
           </select>
-          <button class="m-5 px-15 py-10 r-4 h:bg-1 a:bg-2 bd f:bc-2 h:bs-3 trans-bs">Button</button>
-          <button class="m-5 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-4 bd bc-2">Button</button>
-          <button class="m-5 px-15 py-10 r-4 h:bg-b bg-b-8 c-w a:bg-b-8 trans">Button</button>
-          <button class="m-5 px-15 py-10 r-4 bd bc-r-2 h:bg-r-2 bg-r-1 c-r a:bg-r-4 trans" id="dialog-btn">Dialog</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd f:bc-2 h:bs-3 trans-bs">Button</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 f:bc-4 bd bc-2">Button</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-b bg-b-8 c-w a:bg-b-8 trans">Button</button>
+          <button class="m-5 px-5 py-3 r-3 bd bc-r-2 h:bg-r-2 bg-r-1 c-r a:bg-r-4 trans" id="dialog-btn">Dialog</button>
           <a class="m-5 toe h:c-b h:u trans-c" href="#">链接</a>
         </div>
         <div>
           <input type="checkbox">
         </div>
         <div class="fr ac p-5">
-          <div class="p-5 px-10 r-20 bg-b-1 bd bc-b-2 c-b ml-5 fs-16">你好</div>
-          <div class="p-2 px-10 r-20 bg-o-1 bd bc-o-2 c-o ml-5">我是</div>
-          <div class="p-3 px-10 r-20 bg-g c-w ml-5 bs-2">标签</div>
-          <div class="p-2 px-10 r-20 bd bc-r-2 c-r ml-5">呢！</div>
+          <div class="px-4 r-10 bg-b-1 bd bc-b-2 c-b ml-5 fs-16">你好</div>
+          <div class="px-4 r-10 bg-o-1 bd bc-o-2 c-o ml-5">我是</div>
+          <div class="px-4 r-10 bg-g c-w ml-5 bs-2">标签</div>
+          <div class="px-4 r-10 bd bc-r-2 c-r ml-5">呢！</div>
         </div>
         <div class="p-10">
           <div class="ifr btn-group">
@@ -79,12 +79,12 @@
             <button class="a p-5 px-10 bd bc-2 h:bg-1 ml--1 rtr-5 rbr-5">Group</button>
           </div>
         </div>
-        <div class="p-10">
-          <div class="p-15 bl bc-r-4 c-r bg-r-1 r-5" style="border-left-width: 5px;">以下各章节假设您已使用Vue CLI创建了一个新的Vuetify应用程序，并对Vue、HTML、CSS和JavaScript有基本的了解。 在[安装页面]（/getting-started/Installation/#Vue CLI install）上查找有关使用Vue CLI安装Vuetify的更多信息。</div>
+        <div class="p-10 fs-9">
+          <div class="p-4 m-1 bl bc-r-4 c-r bg-r-1 r-1 lh-3" style="border-left-width: 5px;">以下各章节假设您已使用Vue CLI创建了一个新的Vuetify应用程序，并对Vue、HTML、CSS和JavaScript有基本的了解。 在[安装页面]（/getting-started/Installation/#Vue CLI install）上查找有关使用Vue CLI安装Vuetify的更多信息。</div>
           <div class="p-15 bl bc-w-4 c-w bg-b-6 r-5 mt-20" style="border-left-width: 5px;">在本页中，"Material 图标"被用来指代谷歌官方图标，“Material Design 图标”指代扩展的第三方库。</div>
           <div class="p-15 bd bc-o-4 bg-o-1 r-5 fr mt-20 ac xs:fc xs:as">
             <div class="f-1 c-o">
-              <div class="fs-16 b">We found potential security vulnerabilities in your dependencies.</div>
+              <div class="fs-8 b">We found potential security vulnerabilities in your dependencies.</div>
               <div class="mt-5">Only the owner of this repository can see this message.</div>
             </div>
             <button class="p-5 px-10 bd r-5 bg-o-8 bc-o c-w h:bg-o xs:mt-15">See Dependabot alerts</button>
@@ -159,13 +159,13 @@
     </div>
   </div>
   <div class="pf fu bg-blk-6 z-2 ct vh" id="dialog" style="left: 0;top: 0;">
-    <div class="p-15 bg r-10 bs-5 bd bc-w-1" style="max-width: 280px;">
-      <div class="fs-18 b p-10">Use Google's location service?</div>
-      <div class="p-10">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
-      <div class="fr ac mt-10">
+    <div class="p-5 bg r-8 bs-5 bd bc-w-1" style="max-width: 280px;">
+      <div class="fs-12 b p-3">Use Google's location service?</div>
+      <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
+      <div class="fr ac mt-2">
         <div class="f-1"></div>
-        <button class="h:bg-2 a:bg-4 f:bg-1 px-15 py-7 r-5 ml-10 trans-bg">DISAGREE</button>
-        <button class="h:bg-b-2 a:bg-b-4 f:bg-b-1 px-15 py-7 r-5 ml-10 c-b trans-bg b" id="agree-btn">AGREE</button>
+        <button class="px-5 py-3 r-3 ml-2 trans-bg h:bg-2 a:bg-4 f:bg-1 ">DISAGREE</button>
+        <button class="px-5 py-3 r-3 ml-2 c-b trans-bg b h:bg-b-2 a:bg-b-4 f:bg-b-1 " id="agree-btn">AGREE</button>
       </div>
     </div>
   </div>
