字体大小调整

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- <link rel="stylesheet" href="./dist/ie.css"> -->
   <link rel="stylesheet" href="./dist/light.css" id="style">
   <link rel="stylesheet" href="./dist/color.css">
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> -->
 
   <title>origin.css</title>
   <style>
@@ -16,7 +18,7 @@
     ::-webkit-scrollbar-corner{background-color: transparent;}
   </style>
 </head>
-<body class="bg c-8 fs-10 fc">
+<body class="bg c-8 fs-0.9 fc">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
   <div class="ps wf bb bc-1 bg z-2" style="height: 60px;left:0;top:0;">
     <div class="ma wf px-40 fr hf ac" style="max-width:1200px;">
@@ -117,18 +119,18 @@
         </div> -->
 
         <div class="r-3 bs-1 m-10 pr" style="max-width:360px;">
-          <div class="p-15 fr ac">
+          <div class="p-6 fr ac">
             <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="r-20" width="40" height="40" alt="">
-            <div class="f-1 ml-15">
+            <div class="f-1 ml-6">
               <div class="fs-18 b">Shiba Inu</div>
               <div class="c-6">Dog Breed</div>
             </div>
           </div>
           <img class="wf" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
-          <div class="p-15 pb-5">The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.          </div>
-          <div class="p-5 b">
-            <button class="p-10 r-3 h:bg-1 a:bg-2 a lh-10">LINK</button>
-            <button class="p-10 r-3 h:bg-1 a:bg-2 a lh-10">SHARE</button>
+          <div class="p-6 pb-2">The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.          </div>
+          <div class="p-3 b">
+            <button class="p-4 r-3 h:bg-1 a:bg-2 a lh-1">LINK</button>
+            <button class="p-4 r-3 h:bg-1 a:bg-2 a lh-1">SHARE</button>
           </div>
           <div class="pa fu lf-0 tp-0 bd bc-w-1 r-3 pen"></div>
         </div>
@@ -160,7 +162,7 @@
   </div>
   <div class="pf fu bg-blk-6 z-2 ct vh" id="dialog" style="left: 0;top: 0;">
     <div class="p-5 bg r-8 bs-5 bd bc-w-1" style="max-width: 280px;">
-      <div class="fs-12 b p-3">Use Google's location service?</div>
+      <div class="fs-1.2 b p-3">Use Google's location service?</div>
       <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
       <div class="fr ac mt-2">
         <div class="f-1"></div>
