--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     ::-webkit-scrollbar-corner{background-color: transparent;}
   </style>
 </head>
-<body class="bg c-8 fs-0.9 fc">
+<body class="bg c-8 fs-0.9 fc oh">
   <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
-  <div class="ps wf bb bc-1 bg z-2" style="height: 60px;left:0;top:0;">
-    <div class="ma wf px-40 fr hf ac" style="max-width:1200px;">
+  <div class="ps wf bb bc-1 bg z-2" style="left:0;top:0;">
+    <div class="ma wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
       <h1 class="f-1">ORIGIN.CSS</h1>
-      <button id="switch" class="p-5 px-15 bd bc-1 a r-3 h:bg-2">切换暗色模式</button>
+      <button id="switch" class="p-3 px-5 bd r-3 h:bg-2">切换暗色模式</button>
     </div>
   </div>
   <div class="f1 os">
@@ -41,24 +41,24 @@
         <div class="gfr gtc-4 gap-10 p-10 as">
           <div class="r-3 bg-blue-6 p-10 sm:gc-4 md:gc-2"></div>
           <div class="r-3 bg-blue-6 p-10 sm:gc-4 md:gc-2 md:gcs-3 sm:grs-2 sm:gcs-1"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
-          <div class="r-3 bg-blue-6 p-10"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
+          <div class="r-3 bg-blue-6 p-10 xxs:gc-4"></div>
         </div>
         <div class="fr p-10">
           <div class="p-20 f-1 md:f-3 bg-gray-1"></div>
           <div class="bg-f p-5"></div>
-          <div class="p-20 f-3 md:f-1 bg-orange-1"></div>
+          <div class="p-20 f-3 md:f-1 bg-yellow-1"></div>
         </div>
-        <div class="fr ac fw">
+        <div class="fr ac wrap">
           <select class="px-5 py-3 r-2 bd bc-2 m-10">
             <option value="1">你好</option>
             <option value="2">你好111</option>
           </select>
-          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd f:bc-2 h:bs-3">Button</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd f:bc-2 h:shadow-3">Button</button>
           <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 f:bc-4 bd bc-2">Button</button>
           <button class="m-5 px-5 py-3 r-2 h:bg-blue bg-blue-8 c-white a:bg-blue-8 trans">Button</button>
           <button class="m-5 px-5 py-3 r-3 bd bc-red-2 h:bg-red-2 bg-red-1 c-red a:bg-red-4 trans" id="dialog-btn">Dialog</button>
@@ -68,57 +68,57 @@
           <input type="checkbox">
         </div>
         <div class="fr ac p-5">
-          <div class="px-4 r-10 bg-blue-1 bd bc-blue-2 c-blue ml-5 fs-16">你好</div>
-          <div class="px-4 r-10 bg-orange-1 bd bc-orange-2 c-orange ml-5">我是</div>
-          <div class="px-4 r-10 bg-green c-white ml-5 bs-2">标签</div>
-          <div class="px-4 r-10 bd bc-red-2 c-red ml-5">呢！</div>
+          <div class="px-4 py-1 r-10 bg-blue-1 bd bc-blue-2 c-blue ml-5 fs-1">你好</div>
+          <div class="px-4 py-1 r-10 bg-yellow-1 bd bc-yellow-2 c-yellow ml-5">我是</div>
+          <div class="px-4 py-1 r-10 bg-green c-white ml-5">标签</div>
+          <div class="px-4 py-1 r-10 bd bc-red-2 c-red ml-5">呢！</div>
         </div>
         <div class="p-10">
           <div class="ifr btn-group">
-            <button class="a p-5 px-10 bd bc-2 h:bg-1 rtl-5 rbl-5">This</button>
-            <button class="a p-5 px-10 bd bc-2 h:bg-1 ml--1">is</button>
-            <button class="a p-5 px-10 bd bc-blue bg-blue-1 ml--1 c-blue z-1">Button</button>
-            <button class="a p-5 px-10 bd bc-2 h:bg-1 ml--1 rtr-5 rbr-5">Group</button>
+            <button class="p-2 px-5 bd bc-2 h:bg-1 rtl-3 rbl-3">This</button>
+            <button class="p-2 px-5 bd bc-2 h:bg-1 ml--1">is</button>
+            <button class="p-2 px-5 bd bc-blue bg-blue-1 ml--1 c-blue z-1">Button</button>
+            <button class="p-2 px-5 bd bc-2 h:bg-1 ml--1 rtr-3 rbr-3">Group</button>
           </div>
         </div>
         <div class="p-10 fs-9">
-          <div class="p-4 m-1 bl bc-red-4 c-red bg-red-1 r-1 lh-3" style="border-left-width: 5px;">以下各章节假设您已使用Vue CLI创建了一个新的Vuetify应用程序，并对Vue、HTML、CSS和JavaScript有基本的了解。 在[安装页面]（/getting-started/Installation/#Vue CLI install）上查找有关使用Vue CLI安装Vuetify的更多信息。</div>
+          <div class="p-4 m-1 bl bc-red-4 c-red bg-red-1 r-3" style="border-left-width: 5px;">以下各章节假设您已使用Vue CLI创建了一个新的Vuetify应用程序，并对Vue、HTML、CSS和JavaScript有基本的了解。 在[安装页面]（/getting-started/Installation/#Vue CLI install）上查找有关使用Vue CLI安装Vuetify的更多信息。</div>
           <div class="p-15 bl bc-white-4 c-white bg-blue-6 r-5 mt-20" style="border-left-width: 5px;">在本页中，"Material 图标"被用来指代谷歌官方图标，“Material Design 图标”指代扩展的第三方库。</div>
-          <div class="p-15 bd bc-orange-4 bg-orange-1 r-5 fr mt-20 ac xs:fc xs:as">
-            <div class="f-1 c-orange">
+          <div class="p-15 bd bc-yellow-4 bg-yellow-1 r-5 fr mt-20 ac xs:fc xs:as">
+            <div class="f-1 c-yellow">
               <div class="fs-8 b">We found potential security vulnerabilities in your dependencies.</div>
               <div class="mt-5">Only the owner of this repository can see this message.</div>
             </div>
-            <button class="p-5 px-10 bd r-5 bg-orange-8 bc-orange c-white h:bg-orange xs:mt-15">See Dependabot alerts</button>
+            <button class="p-5 px-10 bd r-5 bg-yellow-8 bc-yellow c-white h:bg-yellow xs:mt-15">See Dependabot alerts</button>
           </div>
         </div>
         <div class="fc">
           <div class="fr ac p-10">
-            <input type="text" class="f-1 py-10 bb bc-2 f:bc-blue mr-10 trans:b-c" placeholder="请输入">
-            <input class="f-1 p-10 bd bc-1 r-4 f:bc-blue trans-bc" placeholder="请输入" type="number">
+            <input type="text" class="f-1 py-4 bb bc-2 f:bc-blue mr-10 trans:b-c" placeholder="请输入">
+            <input class="f-1 p-4 bd bc-1 r-4 f:bc-blue trans-bc" placeholder="请输入" type="number">
           </div>
-          <div class="fr m-10">
-            <div class="p-10 rl-5 bg-1 by bl bc-1 c-6">http://</div>
-            <input class="p-10 bc-1 f:bc-blue bd trans-bc f-1 ml--1" placeholder="请输入" type="text">
-            <div class="p-10 rr-5 by br bc-1 c-6">.com</div>
+          <div class="fr m-4">
+            <div class="p-4 rl-3 bg-1 by bl bc-1 c-6">http://</div>
+            <input class="p-4 bc-1 f:bc-blue bd trans-bc f-1 ml--1" placeholder="请输入" type="text">
+            <div class="p-4 rr-3 by br bc-1 c-6">.com</div>
           </div>
-          <textarea class="p-10 bc-1 m-10 r-5 bd f:bc-blue trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
-          <textarea class="p-10 bg-1 m-10 r-5 bd f:bc-blue f:bg-blue-1 h:bc-1 trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
-          <pre class="bg-1 r-5 p-10 m-10 lh-16 c-8">
+          <textarea class="p-4 bc-1 m-4 r-3 bd bd f:bc-blue trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
+          <textarea class="p-4 bg-1 m-4 r-3 bd f:bc-blue f:bg-blue-1 h:bc-1 trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
+          <pre class="bg-1 r-3 p-4 m-4 c-8 lh-1.5">
   <span class="c-4">// var a = 0;</span>
   var b = 0;
   console.log(a + b);</pre>
         </div>
         <!-- <div class="gfr gtc-4 gr-3 gap-10 m-10" style="height:300px;">
           <div class="bg-blue-6 c-white ct">网格布局</div>
-          <div class="bg-orange-6 c-white gc-1 grs-2"></div>
+          <div class="bg-yellow-6 c-white gc-1 grs-2"></div>
           <div class="bg-g-6 c-white gc-2 gr-2"></div>
           <div class="bg-blue-6 c-white gc-1 gr-2"></div>
-          <div class="bg-orange-6 c-white gc-2 gr-1"></div>
+          <div class="bg-yellow-6 c-white gc-2 gr-1"></div>
           <div class="bg-red-6 c-white gc-2 gr-1"></div>
         </div> -->
 
-        <div class="r-3 bs-1 m-10 pr" style="max-width:360px;">
+        <div class="r-3 shadow-1 m-10 pr" style="max-width:360px;">
           <div class="p-6 fr ac">
             <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" class="r-20" width="40" height="40" alt="">
             <div class="f-1 ml-6">
@@ -129,8 +129,8 @@
           <img class="wf" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="">
           <div class="p-6 pb-2">The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan. A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally bred for hunting.          </div>
           <div class="p-3 b">
-            <button class="p-4 r-3 h:bg-1 a:bg-2 a lh-1">LINK</button>
-            <button class="p-4 r-3 h:bg-1 a:bg-2 a lh-1">SHARE</button>
+            <button class="p-4 r-3 h:bg-1 a:bg-2 f:bg-1 a lh-1">LINK</button>
+            <button class="p-4 r-3 h:bg-1 a:bg-2 f:bg-1 a lh-1">SHARE</button>
           </div>
           <div class="pa fu lf-0 tp-0 bd bc-white-1 r-3 pen"></div>
         </div>
@@ -139,29 +139,29 @@
         <div class="m-10 mt-30">
           <table class="wf">
             <tr class="h:bg-blue-1 trans-bg dur-200">
-              <th class="p-10 by bc-1">表格</th>
-              <th class="p-10 by bc-1">Hello</th>
-              <th class="p-10 by bc-1">Hello</th>
+              <th class="p-3 by bc-1">表格</th>
+              <th class="p-3 by bc-1">Hello</th>
+              <th class="p-3 by bc-1">Hello</th>
             </tr>
             <tr class="h:bg-blue-1 trans-bg dur-200">
-              <td class="p-10 by bc-1">Hello</td>
-              <td class="p-10 by bc-1">Hello</td>
-              <td class="p-10 by bc-1">Hello</td>
+              <td class="p-3 by bc-1">Hello</td>
+              <td class="p-3 by bc-1">Hello</td>
+              <td class="p-3 by bc-1">Hello</td>
             </tr>
           </table>
         </div>
-        <div class="fr mt-20" style="height: 100px;">
-          <div class="f-1 bs-1 mx-10 ct">阴影</div>
-          <div class="f-1 bs-2 mx-10"></div>
-          <div class="f-1 bs-3 mx-10"></div>
-          <div class="f-1 bs-4 mx-10"></div>
-          <div class="f-1 bs-5 mx-10"></div>
+        <div class="fr m-10" style="height: 100px;">
+          <div class="f-1 shadow-1 mx-10 ct">阴影</div>
+          <div class="f-1 shadow-2 mx-10"></div>
+          <div class="f-1 shadow-3 mx-10"></div>
+          <div class="f-1 shadow-4 mx-10"></div>
+          <div class="f-1 shadow-5 mx-10"></div>
         </div>
       </div>
     </div>
   </div>
   <div class="pf fu bg-black-6 z-2 ct vh" id="dialog" style="left: 0;top: 0;">
-    <div class="p-5 bg r-8 bs-5 bd bc-white-1" style="max-width: 280px;">
+    <div class="p-5 bg r-8 shadow-5 bd bc-white-1" style="max-width: 280px;">
       <div class="fs-1.2 b p-3">Use Google's location service?</div>
       <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
       <div class="fr ac mt-2">
