--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="ps wf bb bc-1 bg z-2" style="left:0;top:0;">
     <div class="ma wf px-10 fr hf ac" style="max-width:1200px;height: 60px;">
       <h1 class="f-1">ORIGIN.CSS</h1>
-      <button id="switch" class="p-3 px-5 bd r-3 h:bg-2">切换暗色模式</button>
+      <button id="switch" class="p-3 px-5 bd r-3 h:bg-2 ring-blue">切换暗色模式</button>
     </div>
   </div>
   <div class="f1 os">
@@ -58,10 +58,10 @@
             <option value="1">你好</option>
             <option value="2">你好111</option>
           </select>
-          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd f:bc-2 h:shadow-3">Button</button>
-          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 f:bc-4 bd bc-2">Button</button>
-          <button class="m-5 px-5 py-3 r-2 h:bg-blue bg-blue-8 c-white a:bg-blue-8 trans">Button</button>
-          <button class="m-5 px-5 py-3 r-3 bd bc-red-2 h:bg-red-2 bg-red-1 c-red a:bg-red-4 trans" id="dialog-btn">Dialog</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd h:shadow-3">Button</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-1 a:bg-2 bd bc-2">Button</button>
+          <button class="m-5 px-5 py-3 r-2 h:bg-blue bg-blue-8 c-white a:bg-blue-8 ring-blue trans">Button</button>
+          <button class="m-5 px-5 py-3 r-3 bd bc-red-2 h:bg-red-2 bg-red-1 c-red a:bg-red-4 trans ring-red" id="dialog-btn">Dialog</button>
           <a class="m-5 toe h:c-blue h:u trans-c" href="#">链接</a>
         </div>
         <div>
@@ -76,34 +76,34 @@
         <div class="p-10">
           <div class="ifr btn-group">
             <button class="p-2 px-5 bd bc-2 h:bg-1 rtl-3 rbl-3">This</button>
-            <button class="p-2 px-5 bd bc-2 h:bg-1 ml--1">is</button>
-            <button class="p-2 px-5 bd bc-blue bg-blue-1 ml--1 c-blue z-1">Button</button>
-            <button class="p-2 px-5 bd bc-2 h:bg-1 ml--1 rtr-3 rbr-3">Group</button>
+            <button class="p-2 px-5 bd bc-2 h:bg-1">is</button>
+            <button class="p-2 px-5 bd bc-blue bg-blue-1 c-blue z-1">Button</button>
+            <button class="p-2 px-5 bd bc-2 h:bg-1 rtr-3 rbr-3">Group</button>
           </div>
         </div>
         <div class="p-10 fs-9">
           <div class="p-4 m-1 bl bc-red-4 c-red bg-red-1 r-3" style="border-left-width: 5px;">以下各章节假设您已使用Vue CLI创建了一个新的Vuetify应用程序，并对Vue、HTML、CSS和JavaScript有基本的了解。 在[安装页面]（/getting-started/Installation/#Vue CLI install）上查找有关使用Vue CLI安装Vuetify的更多信息。</div>
-          <div class="p-15 bl bc-white-4 c-white bg-blue-6 r-5 mt-20" style="border-left-width: 5px;">在本页中，"Material 图标"被用来指代谷歌官方图标，“Material Design 图标”指代扩展的第三方库。</div>
-          <div class="p-15 bd bc-yellow-4 bg-yellow-1 r-5 fr mt-20 ac xs:fc xs:as">
+          <div class="p-5 bl bc-white-4 c-white bg-blue-6 r-5 mt-20" style="border-left-width: 5px;">在本页中，"Material 图标"被用来指代谷歌官方图标，“Material Design 图标”指代扩展的第三方库。</div>
+          <div class="p-5 bd bc-yellow-4 bg-yellow-1 r-5 fr mt-20 ac xs:fc xs:as">
             <div class="f-1 c-yellow">
               <div class="fs-8 b">We found potential security vulnerabilities in your dependencies.</div>
-              <div class="mt-5">Only the owner of this repository can see this message.</div>
+              <div class="mt-2">Only the owner of this repository can see this message.</div>
             </div>
-            <button class="p-5 px-10 bd r-5 bg-yellow-8 bc-yellow c-white h:bg-yellow xs:mt-15">See Dependabot alerts</button>
+            <button class="p-3 px-5 bd r-5 bg-yellow-8 bc-yellow c-white h:bg-yellow xs:mt-5">See Dependabot alerts</button>
           </div>
         </div>
         <div class="fc">
           <div class="fr ac p-10">
             <input type="text" class="f-1 py-4 bb bc-2 f:bc-blue mr-10 trans:b-c" placeholder="请输入">
-            <input class="f-1 p-4 bd bc-1 r-4 f:bc-blue trans-bc" placeholder="请输入" type="number">
+            <input class="f-1 p-4 bd bc-1 r-4 f:bc-blue ring-blue trans-bc" placeholder="请输入" type="number">
           </div>
           <div class="fr m-4">
             <div class="p-4 rl-3 bg-1 by bl bc-1 c-6">http://</div>
-            <input class="p-4 bc-1 f:bc-blue bd trans-bc f-1 ml--1" placeholder="请输入" type="text">
+            <input class="p-4 bc-1 f:bc-blue bd trans-bc f-1 ring-blue" placeholder="请输入" type="text">
             <div class="p-4 rr-3 by br bc-1 c-6">.com</div>
           </div>
-          <textarea class="p-4 bc-1 m-4 r-3 bd bd f:bc-blue trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
-          <textarea class="p-4 bg-1 m-4 r-3 bd f:bc-blue f:bg-blue-1 h:bc-1 trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
+          <textarea class="p-4 bc-1 m-4 r-3 bd bd f:bc-blue ring-blue trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
+          <textarea class="p-4 bg-1 m-4 r-3 bd f:bc-blue ring-blue f:bg-blue-1 h:bc-1 trans-bc" placeholder="请输入" rows="4" style="resize: none;"></textarea>
           <pre class="bg-1 r-3 p-4 m-4 c-8 lh-1.5">
   <span class="c-4">// var a = 0;</span>
   var b = 0;
@@ -166,8 +166,8 @@
       <div class="p-3">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
       <div class="fr ac mt-2">
         <div class="f-1"></div>
-        <button class="px-5 py-3 r-3 ml-2 trans-bg h:bg-2 a:bg-4 f:bg-1 ">DISAGREE</button>
-        <button class="px-5 py-3 r-3 ml-2 c-blue trans-bg b h:bg-blue-2 a:bg-blue-4 f:bg-blue-1 " id="agree-btn">AGREE</button>
+        <button class="px-5 py-3 r-3 ml-2 trans-bg h:bg-2 a:bg-4 f:bg-1 ring-blue">DISAGREE</button>
+        <button class="px-5 py-3 r-3 ml-2 c-blue trans-bg b h:bg-blue-2 a:bg-blue-4 f:bg-blue-1 ring-blue" id="agree-btn">AGREE</button>
       </div>
     </div>
   </div>
